--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -15,17 +15,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{document}
-
+\sfdefault
 %% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
 	\includegraphics[width=\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Factor values for the first three factors for (a) the
-		average encounter probability and (b) the average positive
-		density for the species-groups (outer figures) and spatially
-		(inner figures).  Red: positive association to the factor,
-		Blue: negative association}
+	\caption{Factor values for the first three factors for (a) Average
+		encounter probability and (b) Average positive density for the
+		species-groups (outer figures) and spatially (inner figures).
+		Red: positive association to the factor, Blue: negative
+		association}
 \end{center}
 \end{figure}
 
