--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -14,7 +14,6 @@
 % cite is loaded from nature class
 \setlist{itemsep=1pt} % This controls spacing between items in the lists
 \setlength\parindent{0pt} % Removes all indentation from paragraphs
-
 % figures here	
 \graphicspath{figures/}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -26,6 +25,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
+\sfdefault
 
 \begin{affiliations}
 \item Marine and Freshwater Research Centre, Galway-Mayo Institute of
@@ -40,25 +40,30 @@
 \begin{linenumbers}
 
 \begin{abstract} 
-Overexploitation and discarding of reduced quota stocks occurs when catches continue in mixed fisheries pursuing high quota stocks. As EU fisheries management moves to count all fish caught against
-quota (the `Landings obligation'), the challenge is to catch available quota
-within new constraints, else lose productivity.  
+Overexploitation of fish populations occurs when catches continue in fisheries
+pursuing a mix of species and low quota species are discarded. As EU fisheries
+management moves to count all fish caught against quota (the `Landings
+obligation'), the challenge is to catch available quota within new constraints,
+else lose productivity.  
 
 A mechanism for decoupling exploitation of species caught together is spatial
 targeting, but this remains challenging due to complex fishery dynamics and a
-lack of understanding of spatiotemporal community dynamics. We develop a joint
-species distribution model (spatiotemporal factor analysis) to understand how spatial community and fishery
-dynamics interact to determine species and size composition in the example of the highly mixed
-fisheries of the Celtic Sea. Clear common spatial patterns emerge for three
+lack of understanding of spatiotemporal community dynamics. We develop
+application of a joint species distribution model (spatial dynamic factor
+analysis) to understand how spatial community and fishery dynamics interact to
+determine species and size composition in the example of the highly mixed
+fisheries of the Celtic Sea.  Clear common spatial patterns emerge for three
 distinct species-groups and, while distribution varies inter-annually, the same
 species-groups are consistently found in higher densities together, with more
-subtle differences within species-groups. The results highlight both opportunities for and limitations 
-of the ability to spatiotemporally separate catches.
+subtle differences within species-groups. The results highlight both
+opportunities for and limitations of the ability to spatiotemporally separate
+catches.
 
 We highlight the importance of dimension reduction techniques to focus
 management discussion on axes of maximal separation in space and time. We
 propose that spatiotemporal modelling of available data is a scientific
-requirement to address the pervasive and nuanced challenges of managing mixed fisheries.  
+requirement to address the pervasive and nuanced challenges of managing mixed
+fisheries.  
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -175,8 +180,9 @@ types \cite{Ellis2000, Gerritsen2012}. Close to 150 species have been
 identified in the commercial catches of the Celtic Sea, with approximately 30
 species dominating the catch \cite{Mateo2016}.
 
-We parametrise our spatiotemporal model using catch data from seven fisheries-independent surveys undertaken in the Celtic Sea over the period 1990 - 2015
-(Table S1) and include nine of the main commercial species: Atlantic cod
+We parametrise our spatiotemporal model using catch data from seven
+fisheries-independent surveys undertaken in the Celtic Sea over the period 1990
+- 2015 (Table S1) and include nine of the main commercial species: Atlantic cod
 (\textit{Gadus morhua}), Atlantic haddock (\textit{Melanogrammus aeglefinus}),
 Atlantic whiting (\textit{Merlangius merlangus}), European Hake
 (\textit{Merluccius merluccius}), white-bellied anglerfish (\textit{Lophius
@@ -214,10 +220,10 @@ On the second spatial factor for encounter probability a north / south split
 can be seen at approximately 49$^{\circ}$ N while positive density is more
 driven by a positive value in the deeper westerly waters as well as some
 inshore areas. Species-group values for the second factor indicate there are
-positive associations for juvenile monkfish (\emph{L. piscatorius}), juvenile hake,
-juvenile megrim, plaice and juvenile whiting with average positive density,
-which may reflect two different spatial distributions in the more offshore and
-in the inshore areas (Figure 1).
+positive associations for juvenile monkfish (\emph{L. piscatorius}), juvenile
+hake, juvenile megrim, plaice and juvenile whiting with average positive
+density, which may reflect two different spatial distributions in the more
+offshore and in the inshore areas (Figure 1).
 
 On the third factor, there is a positive association with the easterly waters
 for encounter probability and negative with the westerly waters. This manifests
@@ -225,13 +231,12 @@ in the species associations as splitting the roundfish species cod, haddock and
 whiting which all have a positive association with the third factor for average
 encounter probability from the rest of the species-groups which have a negative
 association. Positive density is driven by a north / south split (Figure 1),
-with positive values in the northerly areas. Juvenile monkfish (\emph{L. budgessa} and
-\emph{L. piscatorius}), cod, juvenile haddock, hake, adult plaice and whiting are also
-positively associated with the third factor towards the north while adult
-monkfish (\emph{L. budgessa} and
-\emph{L. piscatorius}), adult haddock, megrims, juvenile plaice
-and sole are negatively associated reflecting their more southerly distribution
-(Figure 1).
+with positive values in the northerly areas. Juvenile monkfish (\emph{L.
+	budgessa} and \emph{L. piscatorius}), cod, juvenile haddock, hake,
+adult plaice and whiting are also positively associated with the third factor
+towards the north while adult monkfish (\emph{L. budgessa} and \emph{L.
+	piscatorius}), adult haddock, megrims, juvenile plaice and sole are
+negatively associated reflecting their more southerly distribution (Figure 1).
 
 While this exploratory factor analysis is modelling unobserved drivers of
 distribution, we considered what might be driving the differences seen in the
@@ -268,44 +273,43 @@ where they can target species from one year to the next, without which it may
 be difficult to avoid unwanted catch.
 
 While spatio-temporal factor coefficients did not show consistent trends from
-year to year across all species, among species-groups there were clear relationships (Figure 2).
-The same factors appear to drive spatio-temporal distributions of megrim,
-anglerfish species and hake (the deeper water species, species-grouping
-negatively associated with the second axes of Figure 2a) and the roundfish and
-flatfish (species-grouping more positively associated with the second axes of
-Figure 2a). For spatio-temporal positive density (Figure 2b) cod, haddock and
-whiting (the roundfish species) are separated from plaice, sole (the flatfish)
-and deeper water species. As such, it can be predicted that higher catches of a
-species within a group (e.g. cod in roundfish) would be expected when catching
-another species within that group (e.g. whiting in roundfish). This suggests
-that one or more common environmental drivers are influencing the distributions
-of the species groups, and that driver differentially affects the species
-groups. Temperature is often included as a covariate in species distribution
-models, but was found not to contribute to the variance in the first factor
-values (Figure S6, no correlations found for either encounter probability or positive
-density).
+year to year across all species, among species-groups there were clear
+relationships (Figure 2).  The same factors appear to drive spatio-temporal
+distributions of megrim, anglerfish species and hake (the deeper water species,
+species-grouping negatively associated with the second axes of Figure 2a) and
+the roundfish and flatfish (species-grouping more positively associated with
+the second axes of Figure 2a). For spatio-temporal positive density (Figure 2b)
+cod, haddock and whiting (the roundfish species) are separated from plaice,
+sole (the flatfish) and deeper water species. As such, it can be predicted that
+higher catches of a species within a group (e.g. cod in roundfish) would be
+expected when catching another species within that group (e.g. whiting in
+roundfish). This suggests that one or more common environmental drivers are
+influencing the distributions of the species groups, and that driver
+differentially affects the species groups. Temperature is often included as a
+covariate in species distribution models, but was found not to contribute to
+the variance in the first factor values (Figure S6, no correlations found for
+either encounter probability or positive density).
 
-\subsection{Spatial correlations show three distinct species-group
-	associations} In order to gain greater insight into the community
-dynamics we considered how species-groups covary in space and time through
-among species-group correlations. Pearson correlation coefficients for the
-modelled average spatial encounter probability (Figure 3a) show clear strong
-associations between adult and juvenile size classes for all species
-(\textgreater 0.75 for all species except hake, 0.56).  Among species-groups,
-hierarchical clustering identified the same three common groups as our visual
-inspection of factor loadings above, with roundfish (cod, haddock, whiting)
-closely grouped in their association, with correlations for adult cod with
-adult haddock and adult whiting of 0.73 and 0.5 respectively, while adult
-haddock with adult whiting was 0.63 (Figure 3a). Flatfish (plaice and sole) are also
-strongly correlated with adult plaice and sole having a coefficient of 0.75.
-The final group are principally the species found in the deeper waters (hake,
-megrim and both anglerfish species) with the megrim strongly associated with
-the budegassa anglerfish species (0.88). Negative relationships were found
-between plaice-sole and the monkfish species (-0.27, -0.26 for the adult size
-class with budegassa adults respectively) and hake (-0.33, -0.37) (Figure 3a) indicating
-spatial separation in distributions. This confirms the associations among
-species seen in the factor loadings, with three distinct species-group
-assemblages being present.
+\subsection{Three clusters of species show similar spatial patterns} In order to
+gain greater insight into the community dynamics we considered how
+species-groups covary in space and time through among species-group
+correlations. Pearson correlation coefficients for the modelled average spatial
+encounter probability (Figure 3a) show clear strong associations between adult
+and juvenile size classes for all species (\textgreater 0.75 for all species
+except hake, 0.56).  Among species-groups, hierarchical clustering identified
+the same three common groups as our visual inspection of factor loadings above,
+with roundfish (cod, haddock, whiting) closely grouped in their association,
+with correlations for adult cod with adult haddock and adult whiting of 0.73
+and 0.5 respectively, while adult haddock with adult whiting was 0.63 (Figure
+3a). Flatfish (plaice and sole) are also strongly correlated with adult plaice
+and sole having a coefficient of 0.75.  The final group are principally the
+species found in the deeper waters (hake, megrim and both anglerfish species)
+with the megrim strongly associated with the budegassa anglerfish species
+(0.88). Negative relationships were found between plaice-sole and the monkfish
+species (-0.27, -0.26 for the adult size class with budegassa adults
+respectively) and hake (-0.33, -0.37) (Figure 3a) indicating spatial separation
+in distributions. This confirms the associations among species seen in the
+factor loadings, with three distinct species-group assemblages being present.
 
 Correlation coefficients for the average positive density (Figure 3b) show
 fewer significant positive or negative relationships among species-groups then
@@ -332,7 +336,7 @@ from one year to the next. This suggests that a positive or negative
 association between two species-groups is likely be persist from one year to
 the next, and that species-groups are consistently associated with each other
 in the catch. The correlation coefficients were 0.59 (0.52 - 0.66) and 0.47
-(0.38 - 0.55) for encounter probability and positive density respectively [FIGURE??].
+(0.38 - 0.55) for encounter probability and positive density respectively.
 However, a linear regression between the spatial correlations and the
 spatio-temporal correlations shows high variance (R\textsuperscript{2} = 0.36
 and 0.22 respectively), indicating that the scale of these relationships does
@@ -374,20 +378,21 @@ densely distributed along the coastal areas of Ireland and Britain, while sole
 are more densely distributed in the Southern part of the English Channel along
 the coast of France.
 
-Predicted catch distribution from a ``typical'' otter trawl
-gear and beam trawl fishing at three different locations highlights the differences fishing gear makes on catches (Figure 4h). As can be seen,
-both the gear selectivity and area fished play important contributions to the
-catch compositions; in the inshore area (location 'A') plaice and sole are the
-two main species in catch reflecting their distribution and abundance, though
-the otter trawl gear catches a greater proportion of plaice to sole than the
-beam trawl.  The area between Britain and Ireland (location 'B') has a greater
-contribution of whiting, haddock, cod, hake and anglerfishes in the catch with
-the otter trawl catching a greater proportion of the roundfish, haddock,
-whiting and cod while the beam trawl catches more anglerfishes and megrims. The
-offshore area has a higher contribution of megrim, anglerfishes and hake with
-the otter trawl catching a greater share of hake and the beam trawl a greater
-proportion of megrim. Megrim dominates the catch for both gears in location
-'C', reflecting its relative abundance in the area.  
+Predicted catch distribution from a ``typical'' otter trawl gear and beam trawl
+fishing at three different locations highlights the differences fishing gear
+makes on catches (Figure 4h). As can be seen, both the gear selectivity and
+area fished play important contributions to the catch compositions; in the
+inshore area (location 'A') plaice and sole are the two main species in catch
+reflecting their distribution and abundance, though the otter trawl gear
+catches a greater proportion of plaice to sole than the beam trawl.  The area
+between Britain and Ireland (location 'B') has a greater contribution of
+whiting, haddock, cod, hake and anglerfishes in the catch with the otter trawl
+catching a greater proportion of the roundfish, haddock, whiting and cod while
+the beam trawl catches more anglerfishes and megrims. The offshore area has a
+higher contribution of megrim, anglerfishes and hake with the otter trawl
+catching a greater share of hake and the beam trawl a greater proportion of
+megrim. Megrim dominates the catch for both gears in location 'C', reflecting
+its relative abundance in the area.  
 
 \subsection{Addressing the scientific challenges of the landing
 	obligation in mixed fisheries} In application to the Celtic Sea we have
@@ -491,16 +496,16 @@ density. The following briefly summarises the key methods implemented in the
 VAST framework. For full details of the model the reader is invited directed to
 Thorson \textit{et al} 2017 \cite{Thorson2017}.
 
-\textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates
-advances in joint dynamic species models \cite{Thorson2017} to take account
-of associations among species-groups by modelling response variables
-as a multivariate process. This is achieved through implementing a factor
-analysis decomposition where common latent trends are estimated so that the
-number of common trends ($M$) is less than the number of species-groups ($N$)
-modelled. The factor coefficients are then associated
-through a function for each factor that returns a positive or negative
-association of one or more species with any location. Log-density of any
-species is then be described as a linear combination of factors and loadings:
+\textbf{\textit{SDFA:}} A spatial dynamic factor analysis incorporates advances
+in joint dynamic species models \cite{Thorson2017} to take account of
+associations among species-groups by modelling response variables as a
+multivariate process. This is achieved through implementing a factor analysis
+decomposition where common latent trends are estimated so that the number of
+common trends is less than the number of species-groups modelled. The factor
+coefficients are then associated through a function for each factor that
+returns a positive or negative association of one or more species with any
+location. Log-density of any species is then be described as a linear
+combination of factors and loadings:
 	\begin{equation}
 		\theta_{c}(s,t) = \sum_{j=1}^{n_{j}}
 		L_{c,j}\psi_{j}(s,t) +\sum_{k=1}^{n_{k}}
@@ -727,8 +732,8 @@ References: 45 \\
 	 The manuscript benefited greatly from discussions with David Stokes,
 	 Colm Lordan, Claire Moore and Hans Gerritsen (Marine Institute,
 	 Ireland), Lisa Readdy, Chris Darby, Ian Holmes, Stephen Shaw and Tim
-	 Earl (Cefas).  The authors are very grateful to Lisa Readdy for provision of
-	 the Cefas datasets.
+	 Earl (Cefas).  The authors are very grateful to Lisa Readdy for
+	 provision of the Cefas datasets.
 
  \item[Competing Interests] The authors declare that they have
 	 no competing financial interests.
@@ -743,13 +748,13 @@ References: 45 \\
 %% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
-	\includegraphics[width=0.8\linewidth]{"Fig1_Combined"}
+	\includegraphics[width=\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
-	\caption{Factor values for the first three factors for (a) the
-		average encounter probability and (b) the average positive
-		density for the species-groups (outer figures) and spatially
-		(inner figures).  Red: positive association to the factor,
-		Blue: negative association.}
+	\caption{Factor values for the first three factors for (a) Average
+		encounter probability and (b) Average positive density for the
+		species-groups (outer figures) and spatially (inner figures).
+		Red: positive association to the factor, Blue: negative
+		association}
 \end{center}
 \end{figure}
 
